// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BrComponentDirective ngOnChanges should rerender a component on change 1`] = `
<div
  id="root3"
>
  
  <span>
    Implicit: updated
  </span>
  <span>
    Component: updated
  </span>
  <span>
    Page: Some Page
  </span>
  <span>
    Template: Some Template
  </span>
</div>
`;

exports[`BrComponentDirective ngOnDestroy should clear the container 1`] = `
<div
  id="root1"
>
  
</div>
`;

exports[`BrComponentDirective ngOnInit should render a component 1`] = `
<div
  id="root7"
>
  
  <span>
    Implicit: something
  </span>
  <span>
    Component: something
  </span>
  <span>
    Page: Some Page
  </span>
  <span>
    Template: Some Template
  </span>
</div>
`;

exports[`BrComponentDirective ngOnInit should render a component using path 1`] = `
<div
  id="root13"
>
  
  <span>
    Implicit: child
  </span>
  <span>
    Component: child
  </span>
  <span>
    Page: Some Page
  </span>
  <span>
    Template: Some Template
  </span>
</div>
`;

exports[`BrComponentDirective ngOnInit should render current node children if the component is not set 1`] = `
<div
  id="root18"
>
  
  <span>
    Implicit: child1
  </span>
  <span>
    Component: child1
  </span>
  <span>
    Page: Some Page
  </span>
  <span>
    Template: Some Template
  </span>
  <span>
    Implicit: child2
  </span>
  <span>
    Component: child2
  </span>
  <span>
    Page: Some Page
  </span>
  <span>
    Template: Some Template
  </span>
</div>
`;

exports[`BrComponentDirective ngOnInit should render nothing if no component was found by the specified path 1`] = `
<div
  id="root15"
>
  
</div>
`;

exports[`BrComponentDirective ngOnInit should render nothing if the page component is not ready 1`] = `
<div
  id="root5"
>
  
</div>
`;

exports[`BrComponentDirective ngOnInit should render nothing if there is no root node 1`] = `
<div
  id="root11"
>
  
</div>
`;

exports[`BrComponentDirective ngOnInit should render root node children if the component is not set 1`] = `
<div
  id="root9"
>
  
  <span>
    Implicit: child1
  </span>
  <span>
    Component: child1
  </span>
  <span>
    Page: Some Page
  </span>
  <span>
    Template: Some Template
  </span>
  <span>
    Implicit: child2
  </span>
  <span>
    Component: child2
  </span>
  <span>
    Page: Some Page
  </span>
  <span>
    Template: Some Template
  </span>
</div>
`;
